# oreshic-record

./: Cargo.toml  README.md  REFACTORING_NOTES.md
.claude/: CLAUDE.md  settings.local.json
doc/: note.md
issues/: close_20260324.md
src/: cli.rs  context.rs  main.rs  ors_type.rs
src/feature/: mod.rs  set.rs  unset.rs
src/feature/record/: dispatch.rs  md.rs  mod.rs
src/feature/record/executor/: batch.rs  mod.rs  pty.rs
src/feature/search/: dispatch.rs  mod.rs
src/feature/search/executor/: command.rs  common.rs  mod.rs  query.rs  writeup.rs
src/feature/search/executor/flag/: del.rs  mod.rs  open.rs  run.rs
src/feature/search/table/: md_records.rs  mod.rs  section_records.rs
src/templates/: record.md
